<resources>
    <string name="app_name">CinemApp</string>

    <string name="app_welcome">Bienvenido %1$s</string>

    <string name="app_portada_film">Películas</string>
    <string name="app_portada_login">Login</string>
    <string name="app_portada_sign_up">Registrarse</string>
    <string name="app_portada_qr_code">Código QR</string>
    <string name="app_portada_tickets">Entradas</string>
    <string name="app_portada_home">Inicio</string>


    <string name="app_login_email_address">E-mail</string>
    <string name="app_login_password">Password</string>

    <string name="register_sub_title">Registrar un nuevo usuario</string>
    <string name="register_name">Nombre</string>
    <string name="register_last_name">Apellido</string>
    <string name="register_cancel">Cancelar</string>
    <string name="aceptar">Aceptar</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_register">Register</string>

    <string-array name="spinnerSelectSeat">
        <item>15:00:00</item>
        <item>18:00:00</item>
        <item>21:00:00</item>
    </string-array>

    <string name="selectSeat_select_time">Seleccione el horario: </string>
    <string name="selectSeat_screen">PANTALLA </string>


    <string name="app_scan_title">Escanea tu codigo QR</string>
    <string name="pelicula_detalle_sinopsis">Sinopsis</string>
    <string name="pelicula_detalle_sin_sinopsis">Actualmente sin sinopsis</string>
    <string name="pelicula_detalle_trailers">Trailers</string>
    <string name="pelicula_detalle_sin_trailers">Actualmente sin trailers</string>
    <string name="pelicula_detalle_comentarios">Comentarios</string>
    <string name="pelicula_detalle_sin_comentarios">Actualmente sin comentarios</string>
    <string name="pelicula_detalle_boton_comprar_entradas">Comprar Entradas</string>
    <string name="app_portada_descuentos">Ver descuentos</string>
    <string name="selectSeat_select_date">Seleccione el día</string>
    <string name="pagar">Pagar</string>


</resources>