<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="10"
tools:context=".Register"
android:background="@drawable/bg">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="3">

        <TextView
            android:id="@+id/titulo"
            android:text="@string/app_name"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/colorTitulo"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
        </TextView>

        <TextView
            android:id="@+id/subTitulo"
            android:text="@string/register_sub_title"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorNegro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="1dp"
            android:layout_marginLeft="1dp">
        </TextView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_weight="7">

        <EditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/register_name"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/registerLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/register_last_name"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <EditText
            android:id="@+id/registerEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_login_email_address"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/app_login_password"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="10">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButtonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_acept"
                android:text="@string/app_portada_login"
                android:textColor="@color/colorNegro"
                android:layout_weight="5"
                android:layout_margin="20dp">
            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerButtonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_border"
                android:text="@string/register_cancel"
                android:textColor="@color/colorBlanco"
                android:layout_weight="5"
                android:layout_margin="20dp"
                >
            </androidx.appcompat.widget.AppCompatButton>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>